[package]
name = "backpack"
description = "A command-line interface to manage items."
version = "0.0.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
repository = "https://github.com/Arthur-Damasceno/backpack"
license = "MIT"
edition = "2021"

[dependencies]
# Parser
clap = { version = "4", features = ["derive"] }

# Serde
serde = { version = "1", features = ["derive"] }
bincode = "*"

# Miscellaneous
thiserror = "*"
